2006-12-07  Hideyuki SHIRAI  <shirai@meadowy.org>

	* [w3m-dev 04184] automatic uncompression in downloading
	* rc.c: Add `AutoUncompress'.
	  (params3): Ditto.
	* fm.h: Add `AutoUncompress'.
	* file.c (loadGeneralFile): Check `AutoUncompress' when uncompress
	  data.
	  (HTMLlineproc2body): Ditto.
	* po/w3m.pot: Add new message for `AutoUncompress'.
	* po/ja.po: ditto.

2006-12-10  Hiroyuki Ito <ZXB01226@nifty.com>

	* [w3m-dev 04159] Re: Is this mailing list still alive?
	* cookie.c: accept invalid "set-cookies" headers
	  when "domainName == .hostName".

2006-12-10  noz

	* [20051124052846@w3mbbs] LiveHTTPHeaders
	* file.c, fm.h, main.c, url.c: add -reqlog option which makes
	  ~/.w3m/request.log like LiveHTTPHeaders of FireFox.

2006-08-07  Fumitoshi UKAI  <ukai@debian.or.jp>

	* mailcap.c (acceptableMimeTypes): change default accept: line
	    w3m should prefer text/html to other text/*.
	    reported as Debian Bug#374296

2006-06-12  Dai Sato  <satodai@w3m.jp>

	* another fix for [w3m-dev-en 01067] Some more patches
	* file.c (loadBuffer): avoid decoding when dump_extra option is specified.

2006-06-10  Dai Sato  <satodai@w3m.jp>

	* fix for [w3m-dev-en 01067] Some more patches
	* file.c (loadGeneralFile): avoid decoding when dump_extra option is specified.

2006-06-10  Dai Sato  <satodai@w3m.jp>

	* [w3m-dev 03992] Change to display progress status when dump_extra option is specified
	* file.c (loadHTMLstream): Show progress status when dump_extra option is specified.

2006-06-07  Dai Sato  <satodai@w3m.jp>

	* [w3m-dev 04129] handling newlines in form values 
	* parsetagx.c: don't delete newlines in hidden values.

2006-05-29  Dai Sato  <satodai@w3m.jp>

	* [w3m-dev-en 01067] Some more patches
	* file.c, html.h, url.c: decode content-encoding in all situations.

2006-05-29  Dai Sato  <satodai@w3m.jp>

	* [w3m-dev-en 01067] Some more patches
	* main.c: delete calls to GC from wrap_GC_warn_proc to avoid deadlocks.

2006-05-29  Dai Sato  <satodai@w3m.jp>
