@@ -1,3 +1,9 @@
+2006-12-07  Hiroyuki Ito  <ZXB01226@nifty.com>
+
+	* [w3m-dev 04185] Re: italic text
+	* file.c, fm.h, html.c, html.h, tagtable.tab:
+	  display <em> and <i> elements with bold letters.
+
 2006-12-07  Hideyuki SHIRAI  <shirai@meadowy.org>
 
 	* [w3m-dev 04184] automatic uncompression in downloading
@@ -8778,4 +8784,4 @@ a	* [w3m-dev 03276] compile error on EWS4800
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.972 2006/12/10 11:01:24 inu Exp $
+$Id: ChangeLog,v 1.973 2006/12/10 11:06:12 inu Exp $
